# datamodel-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  test.dmx
datamodel/: Cargo.toml
datamodel-derive/: Cargo.toml
datamodel-derive/src/: lib.rs
datamodel/src/: attribute.rs  element.rs  lib.rs  serializing.rs
datamodel/src/serializers/: binary.rs  keyvalues2.rs  mod.rs
examples/dmxconvert/: Cargo.toml
examples/dmxconvert/src/: main.rs
src/: attribute.rs  attributes.rs  element.rs  elements.rs  lib.rs  serializers.rs  serializing.rs
src/serializers/: binaray.rs  binary.rs  keyvalues.rs  keyvalues2.rs  mod.rs  xml.rs
src/serializing/: binary.rs
tests/: datamodel.rs
tests/data/: TestV1BinaryModel.dmx  TestV2BinaryModel.dmx  TestV3BinaryModel.dmx  TestV4BinaryModel.dmx  TestV5BinaryModel.dmx  test-simple-v1-1-key2.dmx  test-simple-v1-1.dmx
