[package]
name = "datamodel"
version = "0.6.2"
edition = "2024"
authors = ["Jakobg1215"]
description = "A rust library to serialize and deserialize Valve's proprietary DMX file format."
repository = "https://github.com/Jakobg1215/datamodel-rs/"
license = "MIT"
keywords = ["valve", "source-engine", "datamodel"]
categories = ["parser-implementations"]
readme = "README.md"

[dependencies]
indexmap = "2.2.6"
regex = "1.10.5"
thiserror = "1.0.61"
uuid = { version = "1.9.1", features = ["v4", "rng", "fast-rng"] }
