[package]
name = "datamodel"
version = "0.6.2"
edition = "2024"
authors = ["Jakobg1215"]
description = "A rust library to serialize and deserialize Valve's proprietary DMX file format."
repository = "https://github.com/Jakobg1215/datamodel-rs/"
license = "MIT"
keywords = ["valve", "source-engine", "datamodel"]
categories = ["parser-implementations"]
readme = "README.md"

[dependencies]
chrono = "0.4.42"
indexmap = "2.10.0"
regex = "1.11.1"
thiserror = "2.0.12"
uuid = { version = "1.17.0", features = ["v4", "rng", "fast-rng"] }
