[package]
name = "datamodel"
version = "0.7.0"
edition = "2024"
authors = ["NameIsJakob"]
description = "A rust library to serialize and deserialize Valve's proprietary DMX file format."
repository = "https://github.com/NameIsJakob/datamodel-rs/"
license = "MIT"
keywords = ["valve", "source-engine", "datamodel"]
categories = ["parser-implementations"]
readme = "README.md"

[dependencies]
chrono = "0.4.42"
indexmap = "2.10.0"
regex = "1.11.1"
thiserror = "2.0.12"
uuid = { version = "1.17.0", features = ["v4", "rng", "fast-rng"] }
