[package]
name = "datamodel"
version = "0.9.0"
edition = "2024"
authors = ["NameIsJakob"]
description = "A rust library to serialize and deserialize Valve's proprietary DMX file format"
repository = "https://github.com/NameIsJakob/datamodel-rs/"
license = "MIT"
keywords = ["valve", "source-engine", "datamodel"]
categories = ["parser-implementations"]
readme = "README.md"

[dependencies]
datamodel-derive = { path = "../datamodel-derive", optional = true }
indexmap = { version = "2.13.0", default-features = false, features = ["std"] }
mint = { version = "0.5.9", default-features = false, optional = true }
paste = { version = "1.0.15", default-features = false }
thiserror = { version = "2.0.18", default-features = false }
uuid = { version = "1.22.0", default-features = false, features = [
    "v4",
    "rng",
    "fast-rng",
] }

[features]
default = ["derive"]
derive = ["dep:datamodel-derive"]
